--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,4 @@
+/* CSS for the home component */
 .home-component {
   height: 100vh; /* Full viewport height */
   width: 100%; /* Full viewport width */
@@ -8,11 +9,11 @@
 }
 
 .home-background {
-  position: absolute;
+  position: absolute; /* Change from relative to absolute */
   top: 0;
   left: 0;
-  width: 100%; 
-  height: 100%; 
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   z-index: -1;
 }
@@ -33,32 +34,28 @@
 }
 
 .overlay-content {
-  max-width: 1200px; /* Adjust as needed */
+  max-width: 600px; /* Adjust as needed */
   padding: 20px;
 }
 
-.overlay-content h1 {
-  font-size: 5rem;
-  font-weight: 700;
-  margin-bottom: 1rem;
+.overlay-content h1, .overlay-content h2, .overlay-content p {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4); /* Shadow effect */
 }
 
-.overlay-text {
+.overlay-content h1 {
+  font-size: 3rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.overlay-content h2 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.overlay-content p {
   font-size: 1.5rem;
   line-height: 1.6;
-}
-
-.overlay-text span {
-  transition: color 0.3s ease;
-}
-
-.overlay-text .highlight {
-  color: rgb(114, 113, 111); /* Orange color for highlighted words */
-}
-
-.overlay-text:hover span {
-  color: white; /* White color on hover */
 }
 
 .home-overlay:hover {
