--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home-component">
-  <video class="home-background" autoplay muted loop>
+  <video id="homeVideo" class="home-background" autoplay muted loop playsinline>
     <source src="assets/school-kids.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
@@ -12,3 +12,16 @@
   </div>
 </div>
 
+<div class="home-component">
+  <video id="homeVideo" class="home-background" autoplay muted loop playsinline>
+    <source src="assets/school-kids.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  <div class="home-overlay">
+    <div class="overlay-content">
+      <h1>Tutoring Made Easy</h1>
+      <h2>Hands-on Experience in Tutoring for Different Subjects</h2>
+      <p>Supporting your Child through Grammar School Test</p>
+    </div>
+  </div>
+</div>
