--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,19 @@
 <div class="home-component">
-  <video id="homeVideo" class="home-background" autoplay muted loop playsinline>
-    <source src="assets/school-kids.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+  <div class="video-container">
+    <video class="home-background" autoplay muted loop>
+      <source src="assets/school-kids.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
   <div class="home-overlay">
     <div class="overlay-content">
       <h1>Tutoring Made Easy</h1>
       <h2>Hands-on Experience in Tutoring for Different Subjects</h2>
       <p>Supporting your Child through Grammar School Test</p>
     </div>
+    <div class="buttons">
+      <button class="button"> Register</button>
+      <button class="button">Contact Us</button>
+    </div>
   </div>
 </div>
-
