--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -20,7 +20,7 @@
         <input type="tel" id="phone" name="phone" [(ngModel)]="formData.phone" required pattern="[0-9]{10}">
       </div>
   
-      <button type="submit" (click)="submitForm()">Submit</button>
+      <button type="submit" (click)="submitForm()">Register</button>
     </form>
   </div>
   
