--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,8 +12,9 @@
       <p>Supporting your Child through Grammar School Test</p>
     </div>
     <div class="buttons">
-      <button class="button"> Register</button>
-      <button class="button">Contact Us</button>
+      <button (click)="scrollToForm()" class="button">Register</button>
+      <!-- <button class="button">Contact Us</button> -->
     </div>
   </div>
 </div>
+
