--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -24,7 +24,7 @@
 .home-overlay {
   position:absolute;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
