--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,6 @@
 <div class="home-component">
   <div class="video-container">
-    <video class="home-background" autoplay muted loop>
-      <source src="assets/school-kids.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+    <img src="assets/tutor.jpg" class="home-background" />
   </div>
   <div class="home-overlay">
     <div class="overlay-content">
