--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,26 +1,25 @@
-<div class="form-container">
-    <form>
-      <div class="form-group">
-        <label for="firstName">First Name:</label>
-        <input type="text" id="firstName" name="firstName" [(ngModel)]="formData.firstName" required>
-      </div>
-  
-      <div class="form-group">
-        <label for="lastName">Last Name:</label>
-        <input type="text" id="lastName" name="lastName" [(ngModel)]="formData.lastName" required>
-      </div>
-  
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" [(ngModel)]="formData.email" required email>
-      </div>
-  
-      <div class="form-group">
-        <label for="phone">Phone Number:</label>
-        <input type="tel" id="phone" name="phone" [(ngModel)]="formData.phone" required pattern="[0-9]{10}">
-      </div>
-  
-      <button type="submit" (click)="submitForm()">Register</button>
-    </form>
-  </div>
-  
+<div class="form-container" id="form-component" [class.visible]="visible">
+  <form>
+    <div class="form-group">
+      <label for="first-name">First Name</label>
+      <input type="text" id="first-name" name="first-name" required>
+    </div>
+    <div class="form-group">
+      <label for="last-name">Last Name</label>
+      <input type="text" id="last-name" name="last-name" required>
+    </div>
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" required>
+    </div>
+    <div class="form-group">
+      <label for="phone">Phone Number</label>
+      <input type="tel" id="phone" name="phone" required>
+    </div>
+    <div class="form-group">
+      <label for="Description">Description</label>
+        <textarea name="description" id="description" required></textarea>
+    </div>
+    <button type="submit">Submit</button>
+  </form>
+</div>
